# mk

./: .clang-format  .claudiaideconfig  .gitattributes  .gitignore  CMakeLists.txt  build.sh  新建 文本文档.txt
MkGui/: CMakeLists.txt
MkGui/include/MkGui/: MkGui.h  customcontrol.h  imgui.h  layout.h
MkGui/include/glad/: glad.h
MkGui/src/: MkGui.cpp
MkGui/src/glad/: glad.c
Strategy/: CMakeLists.txt
Strategy/include/abstraction_strategy/: abstraction_strategy.h
Strategy/include/mk_command_strategy/: mk_command_strategy.h
Strategy/src/: abstraction_strategy.cpp  mk_command_strategy.cpp
abstraction_path/: CMakeLists.txt
abstraction_path/include/abstraction_path/: Abs_Path.h
abstraction_path/src/: Abs_Path.cpp
command_list/: CMakeLists.txt
command_list/include/abstraction_command/: abstraction_command.h
command_list/include/add_command/: add_command.h
command_list/include/gcc_command/: gcc_command.h
command_list/include/new_command/: new_command.h
command_list/include/passwd_set/: passwdset.h
command_list/include/translate_command/: translate_command.h
command_list/src/: abstraction_command.cpp  add_command.cpp  gcc_command.cpp  new_command.cpp  passwdset.cpp  translate_command.cpp
create_file/: CMakeLists.txt
create_file/include/abstraction_create/: abstraction_create.h
create_file/include/create_module/: create_module.h
create_file/include/create_project/: create_project.h
create_file/src/: abstraction_create.cpp  create_module.cpp  create_project.cpp
cryptopp/lib/: cryptlib.lib
designmode/: CMakeLists.txt
designmode/include/designmode/abstraction_strategy/: abstraction_strategy.h
designmode/include/mk_command_strategy/: mk_command_strategy.h
designmode/src/: abstraction_strategy.cpp  mk_command_strategy.cpp
main/: CMakeLists.txt  main.cpp
mk/: CMakeLists.txt  mk.cpp
mk_command/: CMakeLists.txt
mk_command/include/abstraction_mk/: abstraction_mk.h
mk_command/include/commands/: add_command.h  cmake_command.h  file_command.h  gcc_command.h  new_command.h  passwd_manage.h  passwd_set.h  translate_command.h
mk_command/include/common_command/: common_command.h
mk_command/src/: abstraction_mk.cpp  common_command.cpp
mk_command/src/commands/: add_command.cpp  cmake_command.cpp  file_command.cpp  gcc_command.cpp  new_command.cpp  passwd_manage.cpp  passwd_set.cpp  translate_command.cpp
module_path/: CMakeLists.txt
module_path/include/module_path/: module_path.h
module_path/src/: module_path.cpp
path/: CMakeLists.txt
path/include/abstraction_path/: Abs_Path.h
path/include/module_path/: module_path.h
path/include/template_path/: template_path.h
path/src/abstraction_path/: Abs_Path.cpp
path/src/module_path/: module_path.cpp
project_path/: CMakeLists.txt
project_path/include/project_path/: project_path.h
project_path/src/: project_path.cpp
sentencepiece/lib/: sentencepiece.lib  sentencepiece_train.lib
test/: CMakeLists.txt
test/include/test/: test.h  uitest.h
test/src/: test.cpp  uitest.cpp
tools/: CMakeLists.txt
tools/include/tools/: tools.h
windows/: CMakeLists.txt
windows/include/PasswordManagement/: PasswordManagement.h  passwdTxt.h
windows/include/basewindows/: abmodel.h  basewindows.h  tmodel.h
windows/include/imgtotxt/: imgtotxt.h
windows/include/wbg/: global.h
windows/src/: PasswordManagement.cpp  basewindows.cpp  pwd_model.cpp  tmodel.cpp  window.cpp
windows/src/qmls/: Interactive.qml  file.qml  main.qml  states_transitions.qml  txtfileitem.qml
